# api-surface-sync

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.agents/skills/project-structure/: SKILL.md
.agents/skills/project-structure/sections/: architecture.md  conventions.md  directory-map.md  running.md
src/api_surface_sync/: __init__.py  openapi.py  registry.py  sdk.py
src/api_surface_sync/surfaces/: fastapi.py  mcp.py  typer.py
tests/: test_openapi.py  test_parity.py  test_registry.py  test_surfaces.py
